# swerve

./: Cargo.toml  README.md  install.ps1  install.sh
.cargo/: config
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  check.yml  release.yml
examples/: README.md  npm-serve-benchmark.rs  python-http-benchmark.rs
src/: globs.rs  hotreload.rs  html.rs  log.rs  main.rs  open.rs
