[package]
name = "swerve"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "debuginfo"

[profile.release.package."*"]
# Optimize libs for size. This seems to have minimal (if any) performance impact
# We do not optimize the top level binary this way because that *does* seem to have a slight performance impact
opt-level = "z"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"]}
colored = "2.1"
glob = "0.3"
gumdrop = "0.8"
local-ip-address = "0.6"
mime_guess = { version = "2.0", no-default-features = true }
tiny_http = "0.12"

# Non-windows dependencies
[target.'cfg(not(windows))'.dependencies]
signal-hook = "0.3.17"