[package]
name = "swerve"
version = "1.7.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "debuginfo"

[profile.release.package."*"]
# Optimize libs for size. This seems to have minimal (if any) performance impact
# We do not optimize the top level binary this way because that *does* seem to have a slight performance impact
opt-level = "z"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"]}
colored = "2.1"
flume = { version = "0.11", optional = true }
glob = "0.3"
gumdrop = "0.8"
local-ip-address = "0.6"
mime_guess = { version = "2.0", no-default-features = true }
notify = { version = "7.0", optional = true }
threadpool = "1.8"
tiny_http = "0.12"
tungstenite = { version = "0.25", optional = true }

# Non-windows dependencies
[target.'cfg(not(windows))'.dependencies]
signal-hook = "0.3"

[features]
default = ["hotreload"]
hotreload = ["notify", "tungstenite", "flume"]
